# LP

./: .gitignore  CMakeLists.txt  README.md
LP/: CMakeLists.txt  lp.cu  lp.h  main.cu
include/: lp.h
tests/: CMakeLists.txt  lp.cpp  test_lp.cpp  tests.cpp  tests2.cpp
